--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+:root {
+  height: 100%;
+}
+
 @layer components {
   .contactInput {
     @apply bg-[#e5e5e5] rounded-md border-b px-6 py-4 border-[#242424]
